# v-c-certificate

./: .gitignore  Makefile  README.md  config.h.in  doxygen.cfg  meson.build
include/vccert/: builder.h  certificate_types.h  delegate.h  error_codes.h  field_mapping.h  fields.h  parser.h  schema.h  type.h  version.h
src/: certificate_types.c
src/builder/: builder_internal.h  vccert_builder_add_short_UUID.c  vccert_builder_add_short_buffer.c  vccert_builder_add_short_int16.c  vccert_builder_add_short_int32.c  vccert_builder_add_short_int64.c  vccert_builder_add_short_int8.c  vccert_builder_add_short_uint16.c  vccert_builder_add_short_uint32.c  vccert_builder_add_short_uint64.c  vccert_builder_add_short_uint8.c  vccert_builder_emit.c  vccert_builder_init.c  vccert_builder_options_init.c  vccert_builder_sign.c  vccert_builder_write_fieldheader.c
src/parser/: parser_internal.h  vccert_contract_closure_call.c  vccert_parser_attest.c  vccert_parser_field.c  vccert_parser_field_first.c  vccert_parser_field_next.c  vccert_parser_find_next.c  vccert_parser_find_short.c  vccert_parser_init.c  vccert_parser_options_init.c  vccert_parser_options_simple_init.c
src/version/: vccert_version.c
subprojects/: vccrypt.wrap  vcmodel.wrap  vpr.wrap
test/: test_certificate_types.cpp  test_field_types.cpp  test_schema_types.cpp
test/builder/: test_vccert_builder.cpp
test/parser/: test_vccert_attest.cpp  test_vccert_parser_field.cpp  test_vccert_parser_field_first_next.cpp  test_vccert_parser_find_next.cpp  test_vccert_parser_find_short.cpp  test_vccert_parser_init.cpp  test_vccert_parser_options_init.cpp
test/version/: test_vccert_version.cpp
